--- a/PaswordManager/Passwords.xaml
+++ b/PaswordManager/Passwords.xaml
@@ -6,7 +6,10 @@
         xmlns:local="clr-namespace:PaswordManager"
         mc:Ignorable="d"
         Title="Passwords" Height="450" Width="800">
-    <Grid>
-        
+    <Grid x:Name="mainGrid">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
     </Grid>
 </Window>
