--- a/PaswordManager/Passwords.xaml
+++ b/PaswordManager/Passwords.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PaswordManager"
         mc:Ignorable="d"
-        Title="Passwords" Height="450" Width="800">
+        Title="Ваши пароли" Height="450" Width="800">
     <Grid x:Name="mainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="8*"/>
@@ -13,11 +13,13 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="5*"></ColumnDefinition>
+                <ColumnDefinition Width="4*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
                 <ColumnDefinition Width="1*"></ColumnDefinition>
                 <ColumnDefinition Width="1*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button x:Name="ExitButton" Grid.Column="1"  VerticalAlignment="Center" HorizontalAlignment="Center" Width="80" Height="20" Background="RoyalBlue" Foreground="White" Content="Закрыть"></Button>
+            <Button x:Name="AddButton" Grid.Column="1"  VerticalAlignment="Center" HorizontalAlignment="Center" Width="80" Height="20" Background="RoyalBlue" Foreground="White" Content="Добавить"></Button>
+            <Button x:Name="ExitButton" Grid.Column="3"  VerticalAlignment="Center" HorizontalAlignment="Center" Width="80" Height="20" Background="RoyalBlue" Foreground="White" Content="Закрыть"></Button>
             <Button x:Name="SaveButton" Grid.Column="2"  VerticalAlignment="Center" HorizontalAlignment="Center" Width="80" Height="20" Background="RoyalBlue" Foreground="White" Content="Сохранить"></Button>
 
         </Grid>
