upd add paswd window

--- a/PaswordManager/AddPasswordWindow.xaml
+++ b/PaswordManager/AddPasswordWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PaswordManager"
         mc:Ignorable="d"
-        Title="Добавить пароль" Height="200" Width="200">
+        Title="Добавить пароль"  Height="200" Width="300">
     <Grid x:Name="addPaswdGrid">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -16,12 +16,18 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <TextBox Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" Text="Сайт" VerticalAlignment="Center" Width="120" HorizontalAlignment="Stretch"/>
-        <TextBox Grid.Column="1" Grid.Row="1" TextWrapping="Wrap" Text="Логин" VerticalAlignment="Center" Width="120" HorizontalAlignment="Stretch"/>
-        <TextBox Grid.Column="1" Grid.Row="2" TextWrapping="Wrap" Text="Пароль" VerticalAlignment="Center" Width="120" HorizontalAlignment="Stretch"/>
-        <TextBox Grid.Column="1" Grid.Row="3" TextWrapping="Wrap" Text="Комментарий" VerticalAlignment="Center" Width="120" HorizontalAlignment="Stretch"/>
-
+        <TextBlock Text="Сайт" Grid.Column="0" Grid.Row="0" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+        <TextBlock Text="Логин" Grid.Column="0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+        <TextBlock Text="Пароль" Grid.Column="0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+        <TextBlock Text="Комментарий" Grid.Column="0" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"></TextBlock>
+        <TextBox x:Name="sitetextBox" Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" HorizontalAlignment="Center"/>
+        <TextBox x:Name="logintextBox" Grid.Column="1" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" HorizontalAlignment="Center"/>
+        <TextBox x:Name="paswdtextBox" Grid.Column="1" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" HorizontalAlignment="Center"/>
+        <TextBox x:Name="commtextBox" Grid.Column="1" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" Width="120" HorizontalAlignment="Center"/>
+        <Button x:Name="Save" Content="Сохранить" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" Width="65" Background="RoyalBlue" Foreground="White"/>
+        <Button x:Name="Close" Content="Отменить" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" Width="65" Background="RoyalBlue" Foreground="White"/>
     </Grid>
     <Window.Resources>
         <Style x:Key="FocusVisual">
